# pytips

./: README.md
template_project/: pyproject.toml  template_code_profile.code-profile
template_project/src/template_project/adv_oops/: data.json  task1.py  task10.py  task11.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  task9.py
template_project/src/template_project/comprehensions/: data.json  task1.py  task2.py  task3.py
template_project/src/template_project/context_managers/: task2.py
template_project/src/template_project/data_types/: task1_1.py  task1_2.py  task1_3.py  task2_1.py  task2_2.py  task3_1.py  task3_2.py
template_project/src/template_project/error_handling/: scraped_data.json  task1.py  task2.py  task3.py
template_project/src/template_project/fast_api/: main.py
template_project/src/template_project/fast_api/books_db/: app.py  books.db  db_handler.py  model.py  schema.py
template_project/src/template_project/fast_api/movie_db/: app.py  crud.py  model.py  (+2 more)
template_project/src/template_project/file_handling/: example.txt  task1.py  task2.py
template_project/src/template_project/generators/: task1.py  task2.py
template_project/src/template_project/magic_methods/: task1.py  task2.py  task3.py
template_project/src/template_project/oops/: task1.py  task2.py  task3.py
template_project/src/template_project/standard_libraries/: data.json  database.txt  task1.py  task2.py  task3.py  task4.py  task5.py
template_project/src/template_project/unit_tests/: log.txt  task1_test.py  task2_test.py  task3.py  task3_test.py
(+5 files in other folders)
