[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "template python project to get started"
authors = ["Soliton"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
