[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "template python project to get started"
authors = ["Soliton"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
